Major changes between version 0.99 and 0.99.1.
------------------------------------------------
  - Read the full packet from the snooping socket simply because
    we want to know the length so we can count bytes in and out.
  - If we have no AF_PACKET support we are probably running on
    a 2.0 kernel so must always down interfaces rather than
    trying to delete addresses by setting the interface to 0.0.0.0.
    The all zeros address has special meaning for 2.0 kernels.
  - Transient interfaces (slip and ppp) should be downed rather
    than set to 0.0.0.0 otherwise they are considered to be in
    use by the kernel and never reused which leads to a resource
    leak.


Major changes between version 0.98.3 and 0.99.
----------------------------------------------
  - Added a "sticky" option. This is like "dynamic" but the IP
    addresses determined from an actual connection will continue
    to be used for the proxy in the future in preference to the
    originally configured addresses. This may be useful if your
    provider uses dynamic addressing but only expires address
    allocations after a relatively long period of inactivity.
  - Added a "broadcast" option. This may be used in conjunction
    with the "netmask" option to manage non-pointopoint links.
    If it is not specified but "remote" is it will default to
    0.0.0.0 in an attempt to get ethertap proxies right on 2.2.x
    kernels. This may cause problems on 2.0.x. I don't know.
  - Added an ifsetup script that can be used to set up interfaces
    in *really* interesting ways. If defined it is used instead
    of ifconfig and *all* routing calls - route, defaultroute,
    addroute/delroute all have to be handled as part of ifsetup.
    At this stage ifsetup is mainly experimental. It is here so
    that configurations using it in future do not have to be
    redefined in order to fall back on a "stable" diald release.
  - Unified all the functions that invoked external programs via