@@ -1,5 +1,7 @@
 Major changes between version 0.99 and 0.99.1.
 ------------------------------------------------
+  - Moved the monitor "INTERFACE" output so that it happens
+    even if an ifsetup script is used.
   - Read the full packet from the snooping socket simply because
     we want to know the length so we can count bytes in and out.
   - If we have no AF_PACKET support we are probably running on
